--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   }
