--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 SECRET_KEY = 'salleFron@Grupo02TheDreamTeam'
+MYSQL_ADDON_HOST=bewsc6ub06185zeit1p7-mysql.services.clever-cloud.com
+MYSQL_ADDON_DB=bewsc6ub06185zeit1p7
+MYSQL_ADDON_USER=udfdcyfahmcn3wwn
+MYSQL_ADDON_PORT=3306
+MYSQL_ADDON_PASSWORD=laC7h4K1DcN0X7a9Fspi
+MYSQL_ADDON_URI=mysql://udfdcyfahmcn3wwn:laC7h4K1DcN0X7a9Fspi@bewsc6ub06185zeit1p7-mysql.services.clever-cloud.com:3306/bewsc6ub06185zeit1p7
 PORT = '3001'
