--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon build/index.js",
     "tsc": "tsc --watch",
-    "start": "node build/index.js"
+    "start": "npm run tsc && node build/index.js"
   },
   "keywords": [],
   "author": "@Javier",
